--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-19 21:38+0100\n"
-"PO-Revision-Date: 2017-06-19 22:59+0100\n"
+"POT-Creation-Date: 2017-06-19 23:33+0100\n"
+"PO-Revision-Date: 2017-06-19 23:34+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -1338,6 +1338,201 @@ msgstr ""
 msgid "Make Your Request"
 msgstr "Faça Seu Pedido"
 
+#: mymwebsite/templates/privacy.html:3
+msgid "Privacy Policy - "
+msgstr "Política de Privacidade - "
+
+#: mymwebsite/templates/privacy.html:6
+msgid "Privacy Policy"
+msgstr "Política de Privacidade"
+
+#: mymwebsite/templates/privacy.html:8
+msgid "Last revision on June 2nd 2017."
+msgstr "Última revisão em 2 de junho de 2017."
+
+#: mymwebsite/templates/privacy.html:10
+msgid ""
+"This Privacy Policy sets forth MyMensor's policy with respect to information "
+"including\n"
+"        personally identifiable data and other information that is collected "
+"from visitors to the Site and Services.\n"
+"        This privacy policy governs your use of a software application "
+"(“Service”), including both a Mobile app running\n"
+"        on mobile devices, and a Website application that runs on both "
+"mobile and desktop/laptop devices, that was\n"
+"        created by Celtapps Software. "
+msgstr ""
+"Esta Política de Privacidade estabelece a política do MyMensor em relação a "
+"informações, incluindo dados de identificação pessoal e outras informações "
+"coletadas dos visitantes do Site e Serviços. Esta política de privacidade "
+"governa o uso de um aplicativo de software (“Serviço”), incluindo um "
+"aplicativo para dispositivos móveis em dispositivos móveis e um aplicativo "
+"de site que é executado em dispositivos móveis e desktop / laptop, que foi "
+"criado pelo Celtapps Software."
+
+#: mymwebsite/templates/privacy.html:15
+msgid "Information collected and its use"
+msgstr "Informações coletadas e seu uso"
+
+#: mymwebsite/templates/privacy.html:16
+msgid ""
+"The Service obtains the information you provide when you download and "
+"register the Service\n"
+"        (“User Provided Data”). Registration is required to use our Service. "
+"When you register with us and use the\n"
+"        Service, you provide: (a) an email address, an username and a "
+"password; (b) information you provide us when you\n"
+"        contact us for help, and; (c) information you enter into our system "
+"when using the Service, such as images,\n"
+"        videos, remarks and numerical data. We may also use the information "
+"you provided us to contact you from time to\n"
+"        time to provide you with important information, required notices and "
+"marketing promotions."
+msgstr ""
+"O Serviço obtém as informações fornecidas quando você baixa e registra o "
+"Serviço (“Dados fornecidos pelo usuário”). O registro é necessário para usar "
+"nosso Serviço. Quando você se cadastrar e usar o Serviço, você fornece: (a) "
+"um endereço de e-mail, um nome de usuário e uma senha; (B) informações que "
+"você nos forneceu quando você nos contata para obter ajuda e; (C) "
+"informações que você entra no nosso sistema ao usar o Serviço, como imagens, "
+"vídeos, observações e dados numéricos. Também podemos usar as informações "
+"que você nos forneceu para contatá-lo de tempos em tempos para fornecer "
+"informações importantes, avisos exigidos e promoções de marketing."
+
+#: mymwebsite/templates/privacy.html:22
+msgid ""
+"In addition, the Service may collect certain information automatically "
+"(“Collected\n"
+"        Information”), such as the type of mobile device you use, your "
+"mobile devices unique device ID, the IP address\n"
+"        of your device, the geographic location of your device, your "
+"operating system, the type of Internet browsers you\n"
+"        use, and information about the way you use the Service. Sometimes we "
+"aggregate user data anonymously to\n"
+"        understand our customer base better."
+msgstr ""
+"Além disso, o Serviço pode coletar certas informações automaticamente "
+"(“Informações coletadas”), como o tipo de dispositivo móvel que você usa, a "
+"identificação do dispositivo exclusivo de seus dispositivos móveis (device "
+"ID), o endereço IP do seu dispositivo, a localização geográfica do seu "
+"dispositivo, o seu Sistema Operacional, o tipo de navegadores de Internet "
+"que você usa e informações sobre a forma como você usa o Serviço. Às vezes, "
+"agregamos dados do usuário anonimamente para entender melhor a nossa base de "
+"clientes."
+
+#: mymwebsite/templates/privacy.html:27
+msgid ""
+"This Service collects information about the location of your device. We use "
+"your location\n"
+"        information to provide location certification services. You may at "
+"any time stop us from further allowing us to\n"
+"        have access to your location data by disabling location services "
+"entirely, or specifically for the app, inside\n"
+"        our app or on your mobile device."
+msgstr ""
+"Este serviço coleta informações sobre a localização do seu dispositivo. "
+"Usamos suas informações de localização para fornecer serviços de "
+"certificação de localização. Você pode, a qualquer momento, impedir que "
+"possamos acessar seus dados de localização, desativando os serviços de "
+"localização inteiramente, ou especificamente para o aplicativo, dentro do "
+"nosso aplicativo ou em seu dispositivo móvel."
+
+#: mymwebsite/templates/privacy.html:31
+msgid "Data Retention Policy; Managing Your Information"
+msgstr "Política de Retenção de Dados; Gerenciamento de Suas Informações"
+
+#: mymwebsite/templates/privacy.html:32
+msgid ""
+"We will retain User Provided data for as long as you use the Service and for "
+"a reasonable\n"
+"        time thereafter. If you’d like to delete User Provided Data that you "
+"have provided via the Service, you can do\n"
+"        so inside our mobile app and inside our web app, for the relevant "
+"portions of information, furthermore, if you\n"
+"        want to completely wipe all information from our servers please "
+"contact us at support@mymensor.com and we will\n"
+"        respond in a reasonable time. Please note that some or all of the "
+"User Provided Data may be required in order\n"
+"        for the Service to function properly, and we may be required to "
+"retain certain information by law."
+msgstr ""
+"Manteremos os dados fornecidos pelo usuário durante o uso do Serviço e por "
+"um tempo razoável a partir de então. Se você deseja excluir os Dados "
+"fornecidos pelo usuário que você forneceu através do Serviço, você pode fazê-"
+"lo dentro do nosso aplicativo móvel e dentro do nosso aplicativo da Web, "
+"para as partes relevantes de informações, além disso, se você deseja limpar "
+"completamente todas as informações de nossos servidores entre em contato "
+"conosco em support@mymensor.com e responderemos em um prazo razoável. "
+"Observe que alguns ou todos os Dados fornecidos pelo usuário podem ser "
+"necessários para que o Serviço funcione corretamente, e talvez iremos reter "
+"certas informações por força de lei."
+
+#: mymwebsite/templates/privacy.html:38
+msgid "Third-Party Payment Processor"
+msgstr "Processador Externo de Pagamentos"
+
+#: mymwebsite/templates/privacy.html:39
+msgid ""
+"We use a third party payment processor to process payments made to us. In "
+"connection with\n"
+"        the processing of such payments, we do not retain any personally "
+"identifiable information or any financial\n"
+"        information such as credit card numbers. All such information is "
+"provided directly to our third party processor,\n"
+"        whose use of your personal information is governed by their privacy "
+"policy (https://www.paypal.com/pt/webapps/mpp/ua/privacy-full?locale."
+"x=en_PT)."
+msgstr ""
+"Usamos um processador de pagamento externo para processar os pagamentos "
+"feitos para nós. Em conexão com o processamento de tais pagamentos, não "
+"conservamos nenhuma informação de identificação pessoal ou qualquer "
+"informação financeira, como números de cartão de crédito. Todas essas "
+"informações são fornecidas diretamente ao nosso processador externo, cujo "
+"uso de suas informações pessoais é regido por sua política de privacidade "
+"(https://www.paypal.com/pt/webapps/mpp/ua/privacy-full?locale.x=en_PT)."
+
+#: mymwebsite/templates/privacy.html:43
+msgid "Third parties access to information obtained by the Service"
+msgstr "Acesso de Terceiros às Informações Obtidas pelo Serviço"
+
+#: mymwebsite/templates/privacy.html:44
+msgid ""
+"We will share your information with third parties only in the ways that are "
+"described in\n"
+"        this privacy statement. We may disclose collected Information, in "
+"the following manners: (a) as required by law,\n"
+"        such as to comply with a subpoena, or similar legal process; (b) "
+"when we believe in good faith that disclosure\n"
+"        is necessary to protect our rights, protect your safety or the "
+"safety of others, investigate fraud, respond to a\n"
+"        government request, act in urgent circumstances to protect the "
+"personal safety of our users or the public, or\n"
+"        protect against legal liability; (c) if Celtapps Software is "
+"involved in a merger, acquisition, or sale of all\n"
+"        or a portion of its assets, you will be notified via email and/or a "
+"prominent notice on our Web site of any\n"
+"        change in ownership or uses of this information, as well as any "
+"choices you may have regarding this\n"
+"        information."
+msgstr ""
+"Nós compartilharemos suas informações com terceiros somente nas formas "
+"descritas nesta declaração de privacidade. Podemos divulgar informações "
+"coletadas, nos seguintes modos: (a) conforme exigido por lei, de modo a "
+"cumprir uma intimação, ou processo legal similar; (b) quando acreditamos de "
+"boa fé que a divulgação é necessária para proteger nossos direitos, proteger "
+"sua segurança ou a segurança de terceiros, investigar fraudes, responder a "
+"um pedido do governo, atuar em circunstâncias urgentes para proteger a "
+"segurança pessoal de nossos usuários ou a do público em geral, ou proteger-"
+"nos contra a responsabilidade legal; (c) se a Celtapps Software estiver "
+"envolvida em uma fusão, aquisição ou venda de toda ou parte de seus ativos, "
+"você será notificado por e-mail e / ou um aviso proeminente em nosso site de "
+"qualquer alteração na propriedade ou uso deste Informações, bem como "
+"quaisquer escolhas que você possa ter sobre essa informação."
+
+#: mymwebsite/templates/privacy.html:53
+msgid "Cookies"
+msgstr "Cookies"
+
 #: mymwebsite/templates/privacy.html:54
 msgid ""
 "Cookies are small pieces of text used to store information on web browsers."
@@ -1396,6 +1591,65 @@ msgstr ""
 "Por favor, note que desabilitar cookies irá redefinir sua sessão, desativar "
 "login automático e pode afetar negativamente a disponibilidade e "
 "funcionalidade de nossos websites e os serviços que fornecemos a você."
+
+#: mymwebsite/templates/privacy.html:61
+msgid "Children"
+msgstr "Crianças"
+
+#: mymwebsite/templates/privacy.html:62
+msgid ""
+"One must be 13 years old to use MyMensor. We do not use the Service to "
+"knowingly solicit\n"
+"        data from or market to children under the age of 13. If a parent or "
+"guardian becomes aware that his or her child\n"
+"        has provided us with information without their consent, he or she "
+"should contact us at support@mymensor.com. We\n"
+"        will delete such information from our files within a reasonable time."
+msgstr ""
+"Você deve ter no mínimo 13 anos para usar o MyMensor. Nós não usamos o "
+"Serviço para conscientemente solicitar dados ou comercializar para crianças "
+"menores de 13 anos. Se um pai ou responsável tomar conhecimento de que seu "
+"filho nos forneceu informações sem o seu consentimento, ele ou ela deve "
+"contatar-nos no support@mymensor.com. Vamos excluir essas informações dos "
+"nossos arquivos dentro de um prazo razoável."
+
+#: mymwebsite/templates/privacy.html:66
+msgid "Security"
+msgstr "Segurança"
+
+#: mymwebsite/templates/privacy.html:67
+msgid ""
+"MyMensor takes reasonable steps to protect your information from loss, "
+"misuse, and\n"
+"        unauthorized access, disclosure, alteration, or destruction. "
+"However, no Internet or email transmission is ever\n"
+"        fully secure or error free. In particular, email sent to or from us "
+"may not be secure. Therefore, you should\n"
+"        take special care in deciding what information you send to us via "
+"email. Please keep this in mind when\n"
+"        disclosing any information to MyMensor."
+msgstr ""
+"O MyMensor toma medidas razoáveis para proteger suas informações de perda, "
+"uso indevido e acesso, divulgação, alteração ou destruição não autorizados. "
+"No entanto, nenhuma transmissão de Internet ou e-mail é totalmente segura ou "
+"sem erros. Em particular, o e-mail enviado de ou para nós pode não ser "
+"seguro. Portanto, você deve ter especial cuidado em decidir quais as "
+"informações que você nos envia por e-mail. Tenha isso em mente ao divulgar "
+"qualquer informação ao MyMensor."
+
+#: mymwebsite/templates/privacy.html:72
+msgid "Contact"
+msgstr "Contato"
+
+#: mymwebsite/templates/privacy.html:73
+msgid ""
+"If you have any questions regarding privacy while using the Service, or have "
+"questions about\n"
+"        our practices, please contact us via email at support@mymensor.com."
+msgstr ""
+"Se você tiver alguma dúvida sobre privacidade ao usar o Serviço, ou tiver "
+"dúvidas sobre nossas práticas, entre em contato conosco por e-mail em "
+"support@mymensor.com."
 
 #: mymwebsite/templates/terms.html:3
 msgid "Terms of Service - "
@@ -2175,7 +2429,7 @@ msgstr "Por favor visite "
 
 #: mymwebsite/templates/terms.html:212
 msgid " to understand how MyMensor collects and uses personal information."
-msgstr "para entender como MyMensor coleta e usa informações pessoais."
+msgstr " para entender como MyMensor coleta e usa informações pessoais."
 
 #: mymwebsite/templates/videos.html:10 mymwebsite/templates/videos.html:16
 msgid "Explainer Video"
