--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-06-19 23:33+0100\n"
-"PO-Revision-Date: 2017-06-19 23:41+0100\n"
+"PO-Revision-Date: 2017-06-19 23:47+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt\n"
@@ -865,7 +865,7 @@ msgid ""
 "password."
 msgstr ""
 "Vá para a página LOGIN e redefina sua palavra-passe. O nome do usuário que "
-"você registrou virá por e-mail, juntamente com um link para registrar a nova "
+"você registou virá por e-mail, juntamente com um link para registar a nova "
 "palavra-passe."
 
 #: mymwebsite/templates/faq.html:400
@@ -1391,14 +1391,14 @@ msgid ""
 "marketing promotions."
 msgstr ""
 "O Serviço obtém as informações fornecidas quando você baixa e registra o "
-"Serviço (“Dados fornecidos pelo usuário”). O registro é necessário para usar "
+"Serviço (“Dados fornecidos pelo usuário”). O registo é necessário para usar "
 "nosso Serviço. Quando você se cadastrar e usar o Serviço, você fornece: (a) "
-"um endereço de e-mail, um nome de usuário e uma senha; (B) informações que "
-"você nos forneceu quando você nos contata para obter ajuda e; (C) "
-"informações que você entra no nosso sistema ao usar o Serviço, como imagens, "
-"vídeos, observações e dados numéricos. Também podemos usar as informações "
-"que você nos forneceu para contatá-lo de tempos em tempos para fornecer "
-"informações importantes, avisos exigidos e promoções de marketing."
+"um endereço de e-mail, um nome de usuário e uma palavra-passe; (B) "
+"informações que você nos forneceu quando você nos contata para obter ajuda "
+"e; (C) informações que você entra no nosso sistema ao usar o Serviço, como "
+"imagens, vídeos, observações e dados numéricos. Também podemos usar as "
+"informações que você nos forneceu para contatá-lo de tempos em tempos para "
+"fornecer informações importantes, avisos exigidos e promoções de marketing."
 
 #: mymwebsite/templates/privacy.html:22
 msgid ""
@@ -1463,7 +1463,7 @@ msgstr ""
 "lo dentro do nosso aplicativo móvel e dentro do nosso aplicativo da Web, "
 "para as partes relevantes de informações, além disso, se você deseja limpar "
 "completamente todas as informações de nossos servidores entre em contato "
-"conosco em support@mymensor.com e responderemos em um prazo razoável. "
+"connosco em support@mymensor.com e responderemos em um prazo razoável. "
 "Observe que alguns ou todos os Dados fornecidos pelo usuário podem ser "
 "necessários para que o Serviço funcione corretamente, e talvez iremos reter "
 "certas informações por força de lei."
@@ -1649,7 +1649,7 @@ msgid ""
 "        our practices, please contact us via email at support@mymensor.com."
 msgstr ""
 "Se você tiver alguma dúvida sobre privacidade ao usar o Serviço, ou tiver "
-"dúvidas sobre nossas práticas, entre em contato conosco por e-mail em "
+"dúvidas sobre nossas práticas, entre em contato connosco por e-mail em "
 "support@mymensor.com."
 
 #: mymwebsite/templates/terms.html:3
@@ -1716,7 +1716,7 @@ msgstr ""
 
 #: mymwebsite/templates/terms.html:25
 msgid "User Account Registration; Passwords and Fees"
-msgstr "Registro de Conta de Usuário; Senhas e Taxas"
+msgstr "Registo de Conta de Usuário; Palavras-Passe e Taxas"
 
 #: mymwebsite/templates/terms.html:26
 msgid ""
@@ -1737,17 +1737,17 @@ msgid ""
 "to terminate such right in accordance with\n"
 "        these Terms and Conditions."
 msgstr ""
-"(A) Licença de uso e registro da conta: para acessar e usar todos os "
-"recursos do serviço, é necessário abrir uma conta (“Conta de usuário”) "
-"registrando-se no MyMensor. Quando você se inscrever para sua Conta de "
-"usuário, você deve fornecer informações verdadeiras, precisas, atualizadas e "
-"completas (“Informações da conta”) e você concorda em atualizar as "
-"informações da conta para garantir que ela esteja atual. Após o registro e a "
-"abertura apropriados de uma Conta de Usuário e sujeito a todos os termos e "
-"condições desses Termos de Serviço, o MyMensor concede a você o direito "
-"pessoal e não transferível e a licença para usar o Serviço, exclusivamente "
-"para seu próprio negócio interno, até que você ou o MyMensor eleja rescindir "
-"esse direito de acordo com estes Termos e Condições."
+"(A) Licença de uso e registo da conta: para acessar e usar todos os recursos "
+"do serviço, é necessário abrir uma conta (“Conta de usuário”) registrando-se "
+"no MyMensor. Quando você se inscrever para sua Conta de usuário, você deve "
+"fornecer informações verdadeiras, precisas, atualizadas e completas "
+"(“Informações da conta”) e você concorda em atualizar as informações da "
+"conta para garantir que ela esteja atual. Após o registo e a abertura "
+"apropriados de uma Conta de Usuário e sujeito a todos os termos e condições "
+"desses Termos de Serviço, o MyMensor concede a você o direito pessoal e não "
+"transferível e a licença para usar o Serviço, exclusivamente para seu "
+"próprio negócio interno, até que você ou o MyMensor eleja rescindir esse "
+"direito de acordo com estes Termos e Condições."
 
 #: mymwebsite/templates/terms.html:35
 msgid ""
@@ -1785,15 +1785,15 @@ msgid ""
 "loss, damages or expenses arising out of a\n"
 "        failure by you to maintain the security of your password."
 msgstr ""
-"(C) Senhas: após a inscrição no Site, você fornecerá ao MyMensor uma senha "
-"para acessar sua conta. Você é responsável por manter a confidencialidade de "
-"sua senha e por todas as suas atividades e as de terceiros que ocorrem por "
-"meio de sua conta, autorizada ou não por você. Você concorda em notificar "
-"imediatamente o MyMensor de qualquer uso suspeito ou real não autorizado de "
-"sua Conta de Usuário. Você concorda que o MyMensor não será, em nenhuma "
-"circunstância, responsável por qualquer custo, perda, danos ou despesas "
-"decorrentes de uma falha por você cometida em manter a segurança de sua "
-"senha."
+"(C) Palavras-Passe: após a inscrição no Site, você fornecerá ao MyMensor uma "
+"palavra-passe para acessar sua conta. Você é responsável por manter a "
+"confidencialidade de sua palavra-passe e por todas as suas atividades e as "
+"de terceiros que ocorrem por meio de sua conta, autorizada ou não por você. "
+"Você concorda em notificar imediatamente o MyMensor de qualquer uso suspeito "
+"ou real não autorizado de sua Conta de Usuário. Você concorda que o MyMensor "
+"não será, em nenhuma circunstância, responsável por qualquer custo, perda, "
+"danos ou despesas decorrentes de uma falha por você cometida em manter a "
+"segurança de sua palavra-passe."
 
 #: mymwebsite/templates/terms.html:48
 msgid "Site Content"
